--- a/Benchmarks/Water Chemistry/Conductivity/Conductivity_Benchmarks.Rmd
+++ b/Benchmarks/Water Chemistry/Conductivity/Conductivity_Benchmarks.Rmd
@@ -105,7 +105,7 @@ if(type == "Flow"){
 if(type == "IWI"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'chem,conn,habt,hyd,sed,temp,prg_bmmi0809', 
+                                                                           metric = 'chem,conn,habt,hyd,sed,temp', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -161,7 +161,7 @@ if(type == "Wildfire"){
 if(type == "Others"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'bankfulldepth,bankfullwidth,ici,iwi,mast2008,msst2008,mwst2008,thalwegdepth,wettedwidth', 
+                                                                           metric = 'bankfulldepth,bankfullwidth,ici,iwi,mast2008,msst2008,mwst2008,thalwegdepth,wettedwidth,prg_bmmi0809', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='other')) 
   }
@@ -229,6 +229,20 @@ cond_vars <- cond_vars %>%
 #### Make Spearman correlation matrix to identify co-varied parameters
 
 ```{r, warning=FALSE}
+# PERFORM NA ROUGHFIX FUNCTION ON METRICS WITH just a few missing values (wait to see about the ones that are missing a lot: BANKFULLDEPTH, BANKFULLWIDTH, MAST2008, THALWEGDEPTH, WETTEDWIDTH)
+cond_vars$CLAYWS  <- na.roughfix(cond_vars$CLAYWS ) # 1 NA
+cond_vars$MSST2008 <- na.roughfix(cond_vars$ MSST2008) # 1 NA
+cond_vars$MWST2008 <- na.roughfix(cond_vars$ MWST2008) # 12 NAs
+cond_vars$NANIWS <- na.roughfix(cond_vars$NANIWS) # 1 NA
+cond_vars$NSURPWS <- na.roughfix(cond_vars$NSURPWS) # 1 NA
+cond_vars$OMWS <- na.roughfix(cond_vars$OMWS) # 1 NA
+cond_vars$PCTIMPSLPHIGH2001WS <- na.roughfix(cond_vars$PCTIMPSLPHIGH2001WS) # 4 NAs
+cond_vars$PERMWS <- na.roughfix(cond_vars$PERMWS) # 1 NA
+cond_vars$RCKDEPWS <- na.roughfix(cond_vars$RCKDEPWS) # 1 NA
+cond_vars$SANDWS <- na.roughfix(cond_vars$SANDWS) # 1 NA
+cond_vars$SW_FLUXWS <- na.roughfix(cond_vars$SW_FLUXWS) # 1 NA
+cond_vars$WTDEPWS <- na.roughfix(cond_vars$WTDEPWS) # 1 NA
+
 # Subset numeric variables only
 cond_vars_num <- cond_vars %>% 
   select(!c(SITE_TYPE:L3Eco)) %>% 
@@ -238,27 +252,10 @@ cond_vars_num <- cond_vars %>%
 # FIND OUT WHICH COLUMNS HAVE NAs (AND WRITE CODE FOR THEM BELOW)
 sapply(cond_vars_num, function(x) sum(is.na(x)))
 
-# PERFORM NA ROUGHFIX FUNCTION ON METRICS WITH just a few missing values (wait to see about the ones that are missing a lot: BANKFULLDEPTH, BANKFULLWIDTH, MAST2008, THALWEGDEPTH, WETTEDWIDTH)
-cond_vars_num$CLAYWS  <- na.roughfix(cond_vars_num$CLAYWS ) # 1 NA
-cond_vars_num$MSST2008 <- na.roughfix(cond_vars_num$ MSST2008) # 1 NA
-cond_vars_num$MWST2008 <- na.roughfix(cond_vars_num$ MWST2008) # 12 NAs
-cond_vars_num$NANIWS <- na.roughfix(cond_vars_num$NANIWS) # 1 NA
-cond_vars_num$NSURPWS <- na.roughfix(cond_vars_num$NSURPWS) # 1 NA
-cond_vars_num$OMWS <- na.roughfix(cond_vars_num$OMWS) # 1 NA
-cond_vars_num$PCTIMPSLPHIGH2001WS <- na.roughfix(cond_vars_num$PCTIMPSLPHIGH2001WS) # 4 NAs
-cond_vars_num$PERMWS <- na.roughfix(cond_vars_num$PERMWS) # 1 NA
-cond_vars_num$RCKDEPWS <- na.roughfix(cond_vars_num$RCKDEPWS) # 1 NA
-cond_vars_num$SANDWS <- na.roughfix(cond_vars_num$SANDWS) # 1 NA
-cond_vars_num$SW_FLUXWS <- na.roughfix(cond_vars_num$SW_FLUXWS) # 1 NA
-cond_vars_num$WTDEPWS <- na.roughfix(cond_vars_num$WTDEPWS) # 1 NA
-
 # FULL CORRELATION MATRIX
 spear <- cor(cond_vars_num, method = "spearman", use = "pairwise.complete.obs")
 spear <- as.data.frame(spear)
 spear.rows <- tibble::rownames_to_column(spear)
-
-#export once, then clean up in Excel
-#write_xlsx(spear.rows, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/Conductivity/Cond_Spearmans_Full_Matrix.xlsx")
 
 # CONDENSED CORRELATION MATRIX (>0.8 ONLY)
 matrix <- spear.rows %>%  
@@ -266,12 +263,12 @@ matrix <- spear.rows %>%
   filter(abs(cor) > 0.8)
 
 #export once, then clean up in Excel
-write_xlsx(matrix, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/Conductivity/Cond_Spearmans_Matrix.xlsx")
+#write_xlsx(matrix, path = "~/BioMonORDEQ/Benchmarks/Water Chemistry/Conductivity/Cond_Spearmans_Matrix.xlsx")
 
 rm(list=c('spear', 'spear.rows'))
 ```
 
-##### NOTE: Take the correlation matrix and make predictor decisions. Look at CV and proportion of 0s to help make these decisions.
+##### NOTE: Take the correlation matrix and make predictor decisions. Look at CV, proportion of 0s, and kernel density plots of variables to help make these decisions.
 
 ```{r}
 # Look at Coefficient of Variance for predictors.
@@ -291,36 +288,8 @@ rm(cv)
  
 ```{r}
 # Look at KD plots for predictors.
-
-# List of variables  
-# "AGKFFACTWS","AL2O3WS","BANKFULLDEPTH","BANKFULLWIDTH","BFIWS","CAOWS","CBNFWS","CLAYWS","CONNWS","DAMDENSWS","DAMNIDSTORWS","DAMNRMSTORWS","ELEVWS","FE2O3WS","FERTWS","HABTWS","HUDEN2010WS","ICI","INORGNWETDEP2008WS","IWI","K2OWS","MANUREWS","MAST2008","MGOWS","MWST2008","NA2OWS","NABD_DENSWS","NABD_NIDSTORWS","NABD_NRMSTORWS","NANIWS","NH42008WS","NO32008WS","NSURPWS","P2O5WS","PCT_EROD","PCTAGSLPHIGH2001WS","PCTAGSLPMID2001WS","PCTBURNAREA2002WS","PCTDECID2001WS","PCTFIRE2002WS","PCTHAY2001WS","PCTHIGHSEV2002WS","PCTIMP2001WS","PCTIMPSLPHIGH2001WS","PCTIMPSLPMID2001WS","PCTLOWSEV2002WS","PCTMODSEV2002WS","PCTMXFST2001WS","PCTNONCARBRESIDWS","PCTSILICICWS","PCTUNDSEV2002WS","PCTURBLO2001WS","PCTURBMD2001WS","PERMWS","POPDEN2010WS","PRECIP_MINUS_EVTWS","PRECIP2008WS","PRECIP8110WS","PRECIP9120WS","RUNOFFWS","SANDWS","SEDWS","SIO2WS","SN2008WS","SW_FLUXWS","TEMPWS","THALWEGDEPTH","TMAX8110WS","TMAX9120WS","TMEAN2008WS","TMEAN8110WS","TMEAN9120WS","TMIN8110WS","TMIN9120WS","WATERINPUTWS","WDRW_LDWS","WETTEDWIDTH","WWTPALLDENSWS","WWTPMINORDENSWS"
-
-# Kernel density plot function
-kd_plots <- function(data, filter_col_name, filter_value) {
-  data %>%
-    filter(.data[[filter_col_name]] == filter_value) %>% # Using .data[[]] for dynamic column names
-    select("AGKFFACTWS","AL2O3WS","BANKFULLDEPTH","BANKFULLWIDTH","BFIWS","CAOWS","CBNFWS","CLAYWS","CONNWS","DAMDENSWS","DAMNIDSTORWS","DAMNRMSTORWS") %>%  
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle(paste0(filter_value))
-}
-
-# broken out by reference status
-kd_plots(data = cond_vars, "ReferenceSite", "REFERENCE")
-kd_plots(data = cond_vars, "ReferenceSite", "MODERATELY DISTURBED")
-kd_plots(data = cond_vars, "ReferenceSite", "MOST DISTURBED")
-
-# broken out by L2 Ecoregion
-kd_plots(data = cond_vars, "L2Eco", "Western Cordillera")
-kd_plots(data = cond_vars, "L2Eco", "Cold Deserts")
-kd_plots(data = cond_vars, "L2Eco", "Marine West Coast Forest")
-
-# not filtered
 cond_vars %>%
-    select("AGKFFACTWS","AL2O3WS","BANKFULLDEPTH","BANKFULLWIDTH","BFIWS","CAOWS","CBNFWS","CLAYWS","CONNWS","DAMDENSWS","DAMNIDSTORWS","DAMNRMSTORWS") %>%  
+    select("AGKFFACTWS","AL2O3WS","BANKFULLDEPTH","BANKFULLWIDTH","BFIWS","CAOWS","CBNFWS","CLAYWS","CONNWS","DAMDENSWS","DAMNIDSTORWS","DAMNRMSTORWS") %>%  # Edit this line to include different vars
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
@@ -328,58 +297,39 @@ cond_vars %>%
   geom_density() +
   geom_rug()
 ```
- 
- 
- 
- 
- 
- 
- 
- 
- 
- # Not edited beyond this point!  SYB 1/7/26
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
-#### Select variables based on correlation analysis. (Either select desired vars or drop undesired ones. Helps if they are in alphabetical order. Don't get rid of columns you want to keep from AWQMS at this stage.)
+#### Select variables based on correlation analysis. (Either select desired vars or drop undesired ones. Helps if they are in alphabetical order. Don't get rid of columns you want to keep from AWQMS at this stage.)  SH, AT, and SB did this together and recorded decisions in 'Var selection decision 1-8-26.xlsx'
 
 ```{r}
-tss_vars_selected <- tss_vars %>% 
-  select(c(MLocID:COMID,BANKFULLWIDTH,BFIWS,CANALDENSWS,CLAYWS,COALMINEDENSWS,COMPSTRGTHWS,DAMDENSWS,ELEVWS,FE2O3WS,HYDRLCONDWS,KFFACTWS,MINEDENSWS,MSST2008,NWS,NA2OWS,NPDESDENSWS,OMWS,PCTAGDRAINAGEWS,PCTAGSLPMID2001WS,PCTALKINTRUVOLWS,PCTALLUVCOASTWS,PCTBL2001WS,PCTCARBRESIDWS,PCTCOASTCRSWS,PCTCOLLUVSEDWS,PCTCONIF2001WS,PCTCROP2001WS,PCTEOLCRSWS,PCTEOLFINEWS,PCTEXTRUVOLWS,PCTFIRE2002WS,PCTFRSTLOSS2002WS,PCTGLACLAKECRSWS,PCTGLACLAKEFINEWS,PCTGLACTILCLAYWS,PCTGLACTILCRSWS,PCTGLACTILLOAMWS,PCTGRS2001WS,PCTHBWET2001WS,PCTHYDRICWS,PCTICE2001WS,PCTIMP2001WS,PCTINCVEGRESP2002WS,PCTMXFST2001WS,PCTNONAGINTRODMANAGVEGWS,PCTNONPROCMASK2002WS,PCTOW2001WS,PCTSALLAKEWS,PCTSHRB2001WS,PCTURBHI2001WS,PCTURBMD2001WS,PCTURBOP2001WS,PCTWATERWS,PCTWDWET2001WS,PESTIC1997WS,POPDEN2010WS,PRECIP9120WS,RCKDEPWS,RDCRSWS,RDCRSSLPWTDWS,RDDENSWS,ROCKNWS,SWS,SANDWS,SEPTICWS,SUPERFUNDDENSWS,SW_FLUXWS,TRIDENSWS,WDRW_LDWS,WETINDEXWS,WTDEPWS,WWTPALLDENSWS,WWTPMAJORDENSWS, PCT_EROD:L3Eco)) # 79 vars in total starting with BANKFULLWIDTH
+cond_vars_selected <- cond_vars %>% 
+  select(c(MLocID:COMID,BFIWS, CANALDENSWS, CAOWS, CLAYWS, COMPSTRGTHWS, DAMDENSWS, ELEVWS, FE2O3WS, HYDRLCONDWS, K2OWS, KFFACTWS, MINEDENSWS, MSST2008, NA2OWS, NHD_pSLOPE, NPDESDENSWS, NWS, OMWS, PCT_EROD, PCTAGDRAINAGEWS, PCTAGSLPMID2001WS, PCTALKINTRUVOLWS, PCTALLUVCOASTWS, PCTBL2001WS, PCTBURNAREA2002WS, PCTCOLLUVSEDWS, PCTCONIF2001WS, PCTCROP2001WS, PCTDECID2001WS, PCTEOLCRSWS, PCTEOLFINEWS, PCTEXTRUVOLWS, PCTFRSTLOSS2002WS, PCTGLACLAKECRSWS, PCTGLACLAKEFINEWS, PCTGLACTILCRSWS, PCTGRS2001WS, PCTHBWET2001WS, PCTICE2001WS, PCTIMP2001WS, PCTINCVEGRESP2002WS, PCTNONAGINTRODMANAGVEGWS, PCTOW2001WS, PCTSALLAKEWS, PCTSHRB2001WS, PCTURBHI2001WS, PCTURBLO2001WS, PCTURBOP2001WS, PCTWATERWS, PESTIC1997WS, POPDEN2010WS, PRECIP9120WS, RCKDEPWS, RDCRSSLPWTDWS, RDCRSWS, RDDENSWS, ROCKNWS, SANDWS, SEPTICWS, STRMPOW_CAT, SUPERFUNDDENSWS, SW_FLUXWS, SWS, TMAX9120WS, TRIDENSWS, WATERINPUTWS, WETINDEXWS, WETTEDWIDTH, WTDEPWS, WWTPALLDENSWS,SITE_TYPE:L3Eco)) %>% 
+  relocate(COMID, .after = cal_val) %>% 
+  mutate(logCond = log(Conductivity)) %>% 
+  relocate(logCond, .before= Conductivity)
 ```
 
 #### Perform final correlation check
 
 ```{r, warning=FALSE}
 # Subset numeric variables only
-tss_vars_num_selected <- tss_vars_selected %>% 
-  select(!c(PCT_EROD:L3Eco)) %>% 
-  select(!c(MLocID:logTSS)) 
+cond_vars_num_selected <- cond_vars_selected %>% 
+  select(!c(SITE_TYPE:L3Eco)) %>% 
+  select(!c(MLocID:Conductivity)) 
 
 # FULL CORRELATION MATRIX
-spear2 <- cor(tss_vars_num_selected, method = "spearman", use = "pairwise.complete.obs")
+spear2 <- cor(cond_vars_num_selected, method = "spearman", use = "pairwise.complete.obs")
 spear2 <- as.data.frame(spear2)
-spear.rows2 <- tibble::rownames_to_column(spear2)
+spear2.rows <- tibble::rownames_to_column(spear2)
 
 # CONDENSED CORRELATION MATRIX (>0.8 ONLY)
-matrix2_new <- spear.rows2 %>%  
+matrix2 <- spear2.rows %>%  
   gather(-rowname, key = "colname", value = "cor") %>% 
   filter(abs(cor) > 0.8)
 
-rm(list=c('spear2', 'spear.rows2'))
+rm(list=c('spear2', 'spear2.rows', 'cond_vars_num_selected'))
+
 # ***CONTINUE ONCE NO CORRELATED VARIABLES REMAIN***
+
+rm('cond_vars_num_selected')
 ```
 
 # **3 - PREPARE DATA FOR MODELS**
@@ -388,17 +338,10 @@ rm(list=c('spear2', 'spear.rows2'))
 
 ```{r, warning=FALSE}
 # FIND OUT WHICH COLUMNS HAVE NAs (AND WRITE CODE FOR THEM BELOW)
-sapply(tss_vars_selected, function(x) sum(is.na(x)))
+sapply(cond_vars_selected, function(x) sum(is.na(x)))
 
-# PERFORM NA ROUGHFIX FUNCTION ON ALL METRICS WITH AT LEAST 1 NA VALUE (ADD CODE AS NEEDED)
-tss_vars_selected$BANKFULLWIDTH <- na.roughfix(tss_vars_selected$BANKFULLWIDTH) #bankfull width (n = 66 NAs)
-tss_vars_selected$SW_FLUXWS <- na.roughfix(tss_vars_selected$SW_FLUXWS) #surface water flux (n = 2 NAs)
-
-# Subset numeric variables only
-tss_vars_num_selected <- tss_vars_selected %>% 
-  select(!c(PCT_EROD:L3Eco)) %>% 
-  select(!c(MLocID:logTSS)) 
-
+# PERFORM NA ROUGHFIX FUNCTION ON ALL REMAINING METRICS.
+cond_vars_selected$WETTEDWIDTH <- na.roughfix(cond_vars_selected$WETTEDWIDTH) # 70 NAs
 ```
 
 # **4 - EXPLORE DATA**
@@ -407,21 +350,16 @@ tss_vars_num_selected <- tss_vars_selected %>%
 
 ```{r}
 # HISTOGRAM
-hist(cond_vars$Conductivity, main = "", xlab = "Conductivity") #raw data
-
-cond_vars <- cond_vars %>% 
-  mutate(logCond = log(Conductivity)) %>% 
-  relocate(.after= Conductivity)
-
-hist(cond_vars$logCond, main = "", xlab = "log(Conductivity)")
+hist(cond_vars_selected$Conductivity, main = "", xlab = "Conductivity") #raw data
+hist(cond_vars_selected$logCond, main = "", xlab = "log(Conductivity)")
 
 # DENSITY PLOT
-hist(tss_vars_selected$logTSS, main="", prob=T, xlab = "TSS")
-d <- density(tss_vars_selected$logTSS) #Estimate probability density and save it into **d**
+hist(cond_vars_selected$logCond, main="", prob=T, xlab = "logCond")
+d <- density(cond_vars_selected$logCond) #Estimate probability density and save it into **d**
 lines(d, col='red',lwd=2) #Superimpose the probability density as a curve on the previous probability density histogram
 
 # BOX PLOT & STRIP CHART
-boxplot(tss_vars_selected$logTSS, ylab = "TSS")
+boxplot(cond_vars_selected$logCond, ylab = "logCond")
 #stripchart(tss_vars_selected$TSS, vertical = T, pch=1, col='red', add = T)
 
 ```
@@ -433,8 +371,7 @@ boxplot(tss_vars_selected$logTSS, ylab = "TSS")
 kd_plots <- function(data, filter_col_name, filter_value) {
   data %>%
     filter(.data[[filter_col_name]] == filter_value) %>% # Using .data[[]] for dynamic column names
-    select(BANKFULLWIDTH:L3Eco) %>% 
-    select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+    select(PRECIP9120WS,TMAX9120WS,KFFACTWS,MSST2008,OMWS,CLAYWS,SWS,PCT_EROD,ELEVWS,SW_FLUXWS,POPDEN2010WS,NA2OWS,ROCKNWS,SANDWS,COMPSTRGTHWS,WTDEPWS,RDCRSWS,CAOWS,BFIWS,PCTDECID2001WS) %>% 
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
@@ -444,56 +381,52 @@ kd_plots <- function(data, filter_col_name, filter_value) {
 }
 
 # Top 20 variables from RF model broken out by reference status
-kd_plots(data = tss_vars_selected, "ReferenceSite", "REFERENCE")
-kd_plots(data = tss_vars_selected, "ReferenceSite", "MODERATELY DISTURBED")
-kd_plots(data = tss_vars_selected, "ReferenceSite", "MOST DISTURBED")
+kd_plots(data = cond_vars_selected, "ReferenceSite", "REFERENCE")
+kd_plots(data = cond_vars_selected, "ReferenceSite", "MODERATELY DISTURBED")
+kd_plots(data = cond_vars_selected, "ReferenceSite", "MOST DISTURBED")
 
 # Top 20 variables from RF model broken out by L2 Ecoregion
-kd_plots(data = tss_vars_selected, "L2Eco", "Western Cordillera")
-kd_plots(data = tss_vars_selected, "L2Eco", "Cold Deserts")
-kd_plots(data = tss_vars_selected, "L2Eco", "Marine West Coast Forest")
+kd_plots(data = cond_vars_selected, "L2Eco", "Western Cordillera")
+kd_plots(data = cond_vars_selected, "L2Eco", "Cold Deserts")
+kd_plots(data = cond_vars_selected, "L2Eco", "Marine West Coast Forest")
 
-# Top 20 variables from RF model broken out by TSS category (ND, med, high)
-# Non-detects
-tss_vars_selected %>%
-  filter(TSS<=0.25 | TSS<=0.5) %>%  # N = 356
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+# Top 20 variables from RF model broken out by Conductivity category 
+# < 100
+cond_vars_selected %>%
+  filter(Conductivity<=100) %>%  
+  select(PRECIP9120WS,TMAX9120WS,KFFACTWS,MSST2008,OMWS,CLAYWS,SWS,PCT_EROD,ELEVWS,SW_FLUXWS,POPDEN2010WS,NA2OWS,ROCKNWS,SANDWS,COMPSTRGTHWS,WTDEPWS,RDCRSWS,CAOWS,BFIWS,PCTDECID2001WS) %>% 
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
   facet_wrap(~ key, scales = "free") +
   geom_density() +
-  geom_rug() + ggtitle("ND")
+  geom_rug() + ggtitle("Conductivity 0-100")
 
-# >0.5 - 20 mg/L
-tss_vars_selected %>%
-  filter(TSS > 0.5 | TSS <= 20) %>% # N = 717
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+# 100-300
+cond_vars_selected %>%
+  filter(Conductivity > 100 | Conductivity <= 300) %>% 
+  select(PRECIP9120WS,TMAX9120WS,KFFACTWS,MSST2008,OMWS,CLAYWS,SWS,PCT_EROD,ELEVWS,SW_FLUXWS,POPDEN2010WS,NA2OWS,ROCKNWS,SANDWS,COMPSTRGTHWS,WTDEPWS,RDCRSWS,CAOWS,BFIWS,PCTDECID2001WS) %>% 
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
   facet_wrap(~ key, scales = "free") +
   geom_density() +
-  geom_rug() + ggtitle("TSS 1-20 mg/L")
+  geom_rug() + ggtitle("Conductivity 100-300")
 
-# >20 mg/L
-tss_vars_selected %>%
-  filter(TSS > 20) %>% # N = 35
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+# 300+
+cond_vars_selected %>%
+  filter(Conductivity > 300) %>% 
+  select(PRECIP9120WS,TMAX9120WS,KFFACTWS,MSST2008,OMWS,CLAYWS,SWS,PCT_EROD,ELEVWS,SW_FLUXWS,POPDEN2010WS,NA2OWS,ROCKNWS,SANDWS,COMPSTRGTHWS,WTDEPWS,RDCRSWS,CAOWS,BFIWS,PCTDECID2001WS) %>% 
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
   facet_wrap(~ key, scales = "free") +
   geom_density() +
-  geom_rug() + ggtitle("TSS >20 mg/L")
+  geom_rug() + ggtitle("Conductivity >300")
 
 # All TSS
-tss_vars_selected %>%
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+cond_vars_selected %>%
+  select(PRECIP9120WS,TMAX9120WS,KFFACTWS,MSST2008,OMWS,CLAYWS,SWS,PCT_EROD,ELEVWS,SW_FLUXWS,POPDEN2010WS,NA2OWS,ROCKNWS,SANDWS,COMPSTRGTHWS,WTDEPWS,RDCRSWS,CAOWS,BFIWS,PCTDECID2001WS) %>% 
   keep(is.numeric) %>% 
   gather() %>% 
   ggplot(aes(value)) +
@@ -507,20 +440,20 @@ tss_vars_selected %>%
 
 ```{r}
 # SUBSET DATA
-tss.cal <- tss_vars_selected %>%  #subset CALibration dataset
+cond.cal <- cond_vars_selected %>%  #subset CALibration dataset
   filter(cal_val == 'CAL') %>%  
-  select(-c(MLocID:TSS, COMID))
+  select(-c(MLocID:COMID, Conductivity)) #drop conductivity in favor of logCond. Drop AWQMS columns too,
 
-tss.val <- tss_vars_selected %>%  #subset VALidation dataset
+cond.val <- cond_vars_selected %>%  #subset VALidation dataset
   filter(cal_val == 'VAL') %>%  
-  select(-c(MLocID:TSS, COMID))
+  select(-c(MLocID:COMID, Conductivity))
 
-tss.ref <- tss_vars_selected %>% #subset reference only dataset
+cond.ref <- cond_vars_selected %>% #subset reference only dataset
   filter(ReferenceSite == 'REFERENCE') %>%  
-  select(-c(MLocID:TSS, COMID))
+  select(-c(MLocID:COMID, Conductivity))
 
-tss.cal_val <- rbind(tss.cal, tss.val)
-write_xlsx(tss.cal_val, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//TSS-Cal-val_New", Sys.Date(), ".xlsx"))
+cond.cal_val <- rbind(cond.cal, cond.val)
+#write_xlsx(cond.cal_val, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//Cond-Cal-val_New", Sys.Date(), ".xlsx"))
 ```
 
 ## FULL MODEL - ALL PREDICTORS INCLUDED (N = 79)
@@ -530,8 +463,8 @@ write_xlsx(tss.cal_val, path = paste0("C://Users//sberzin//OneDrive - Oregon//De
 ```{r}
 # One way to find best mtry based on tuneRF.
     # Tune mtry based on OOB error
-best_mtry <- tuneRF(tss.cal[, -which(names(tss.cal) == "logTSS")], # Predictors
-                        tss.cal$logTSS, # Response
+best_mtry <- tuneRF(cond.cal[, -which(names(cond.cal) == "logCond")], # Predictors
+                        cond.cal$logCond, # Response
                         ntreeTry = 500, # Number of trees to try for each mtry
                         stepFactor = 2, # Factor to multiply/divide mtry by
                         improve = 0.01, # Minimum improvement to continue search
@@ -540,13 +473,13 @@ best_mtry <- tuneRF(tss.cal[, -which(names(tss.cal) == "logTSS")], # Predictors
 print(best_mtry)
 
 # Another approach using Caret.  Takes >50 minutes to run, not that different from mtry approach above.
-# control <- trainControl(method="repeatedcv", number=10,repeats = 3, search="random")
-# set.seed(1)
-# mtry <- sqrt(ncol(tss.cal[ , 2:80]
-# ))
-# rf_random <- train(logTSS ~., data = tss.cal, method = "rf", metric = "RMSE", tuneLength = 15, trControl=control)
-# print(rf_random)
-# plot(rf_random)
+control <- trainControl(method="repeatedcv", number=10,repeats = 3, search="random")
+set.seed(1)
+mtry <- sqrt(ncol(cond.cal[ , 2:74]
+))
+rf_random <- train(logCond ~., data = cond.cal, method = "rf", metric = "RMSE", tuneLength = 15, trControl=control)
+print(rf_random)
+plot(rf_random)
 
 ```
 
@@ -555,10 +488,10 @@ print(best_mtry)
 ```{r}
 set.seed(39)
 
-rf.full <- randomForest(logTSS ~ ., tss.cal, importance = TRUE, mtry=7, keep.forest = TRUE, ntree = 500) #run random forest model on all predictors
+rf.full <- randomForest(logCond ~ ., cond.cal, importance = TRUE, mtry=20, keep.forest = TRUE, ntree = 500) #run random forest model on all predictors. mtry=20 based on Caret grid search results.
 print(rf.full)
 
-varImpPlot(rf.full, type = 1, n.var = 20, main = "All-Sites Model") #variable importance plot
+varImpPlot(rf.full, type = 1, n.var = 25, main = "All-Sites Model") #variable importance plot
 #varImpPlot(rf.full, type = 2, n.var = 20, main = "Full Model") #variable importance plot
 ```
 
@@ -573,53 +506,61 @@ plot(rf.full, log="x", main = '')  # 500 seems to work fine.
 
 ```{r}
 # Predictions
-pred.rf <- predict(rf.full, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = '')
+pred.rf <- predict(rf.full, newdata = cond.cal)
+plot(cond.cal$logCond ~ pred.rf, xlab = 'predicted logCond', ylab = 'observed logCond', main = 'Full model')
 abline(a=0,b=1)
-text(4,1, "RMSE=6.30 
-%Var=29.94")
+#text(4,1, "RMSE=6.30 
+#%Var=29.94")
 
-# Model error
-#(rmse<-sqrt(sum((pred.rf - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf <- exp(pred.rf)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.full <- sqrt(sum((ut_pred.rf - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.full ))
-
-range_tss <- max(exp(tss.cal_val$logTSS)-1) - min(exp(tss.cal_val$logTSS)-1)
-RMSE.ut.rf.full_scaled <- RMSE.ut.rf.full/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.full_scaled*100, '%'))
+# # Model error
+# #(rmse<-sqrt(sum((pred.rf - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
+# ut_pred.rf <- exp(pred.rf)-1
+# ut_tss.cal <- exp(tss.cal$logTSS)-1
+# RMSE.ut.rf.full <- sqrt(sum((ut_pred.rf - ut_tss.cal)^2)/length(tss.cal$logTSS))
+# print(paste("inverse natural log RMSE =", RMSE.ut.rf.full ))
+# 
+# range_tss <- max(exp(tss.cal_val$logTSS)-1) - min(exp(tss.cal_val$logTSS)-1)
+# RMSE.ut.rf.full_scaled <- RMSE.ut.rf.full/range_tss
+# print(paste("scaled untransformed RMSE", RMSE.ut.rf.full_scaled*100, '%'))
 ```
+
+
+
+
+# Not edited below this point.  SYB 1/8/26
+
+
+
 
 ## REDUCED MODEL - IMPORTANT PREDICTORS ONLY
 
-#### Build reduced model with 20 predictors
+#### Build reduced model with 15 predictors
 
 ```{r}
 set.seed(32)
 
-rf.red_20 <- randomForest(logTSS ~ WDRW_LDWS + PCTCONIF2001WS + CLAYWS + PESTIC1997WS + SANDWS + PCTCROP2001WS + POPDEN2010WS + PRECIP9120WS + PCTAGSLPMID2001WS + PCT_EROD + SW_FLUXWS + PCTIMP2001WS + RDCRSWS + WTDEPWS + ELEVWS + WETINDEXWS + PCTSHRB2001WS + KFFACTWS + PCTICE2001WS + RCKDEPWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=7, ntree = 500) 
+rf.red_15 <- randomForest(logCond ~ PRECIP9120WS+TMAX9120WS+KFFACTWS+MSST2008+OMWS+CLAYWS+SWS+PCT_EROD+ELEVWS+SW_FLUXWS+POPDEN2010WS+NA2OWS+ROCKNWS+SANDWS+COMPSTRGTHWS, data = cond.cal, importance = TRUE,  keep.forest = TRUE, mtry=15, ntree = 500) 
 
-print(rf.red_20)
-summary(rf.red_20)
+print(rf.red_15)
+summary(rf.red_15)
 
-varImpPlot(rf.red_20, type = 1, n.var = 20, main = "Reduced Model top 20") #variable importance plot
+varImpPlot(rf.red_15, type = 1, n.var = 15, main = "Reduced Model top 15") #variable importance plot
 #varImpPlot(rf.red_20, type = 2, n.var = 20, main = "Reduced Model top 20") #variable importance plot
 
 # Predictions & model error
-pred.rf.red_20 <- predict(rf.red_20, newdata = tss.cal)
-plot(tss.cal$logTSS ~ pred.rf.red_20, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,4.5), ylim = c(0,4.5), main = 'red_20')
+pred.rf.red_15 <- predict(rf.red_15, newdata = cond.cal)
+plot(cond.cal$logCond ~ pred.rf.red_15, xlab = 'predicted logCond', ylab = 'observed logCond', main = 'red_15')
 abline(a=0,b=1)
 
-# Model error
-#(rmse<-sqrt(sum((pred.rf.red_20 - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
-ut_pred.rf.red_20 <- exp(pred.rf.red_20)-1
-ut_tss.cal <- exp(tss.cal$logTSS)-1
-RMSE.ut.rf.red_20 <- sqrt(sum((ut_pred.rf.red_20 - ut_tss.cal)^2)/length(tss.cal$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_20))
-
-RMSE.ut.rf.red_20_scaled <- RMSE.ut.rf.red_20/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_20_scaled*100, '%'))
+# # Model error
+# #(rmse<-sqrt(sum((pred.rf.red_20 - tss.cal$logTSS)^2)/length(tss.cal$logTSS))) #untransformed prediction error
+# ut_pred.rf.red_20 <- exp(pred.rf.red_20)-1
+# ut_tss.cal <- exp(tss.cal$logTSS)-1
+# RMSE.ut.rf.red_20 <- sqrt(sum((ut_pred.rf.red_20 - ut_tss.cal)^2)/length(tss.cal$logTSS))
+# print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_20))
+# 
+# RMSE.ut.rf.red_20_scaled <- RMSE.ut.rf.red_20/range_tss
+# print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_20_scaled*100, '%'))
 ```
 
 #### \* Final reduced model N = 15
